[package]
name = "swarm_aggregation_ga"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_distr = "0.4.3"
rayon = "1.6.0"
chrono = "0.4.23"
gag = "1.0.0"
fastrand = "1.9.0"
clap = { version = "4.3.0", features = ["derive"] }
